# playground

./: .gitignore  .replit  404.html  CHANGELOG.md  Dockerfile  README.md  branch-protection.json  curr.json  docker-compose.yaml  index.html  mkdocs.yml  package.json  pom.xml  pyproject.toml  release.properties  search.html
.github/: sync-repo-settings.yaml
.github/workflows/: automerge.yaml  ci.yaml  docs.yaml  ngrok.yaml  pre-commit_autoupdate  release.yaml
cli/: index.html
docs/: cli.md  index.md
playground/: main.py
search/: search_index.json
