[tool.poetry]
name = "playground"
version = "1.4.0"
description = ""
authors = ["Branch Vincent <branchevincent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
python-semantic-release = "^7.16.1"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
build_command = "poetry build"
upload_to_pypi = false
changelog_file = ".gitignore"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
