[tool.poetry]
name = "playground"
version = "1.5.3"
description = ""
authors = ["Branch Vincent <branchevincent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
python-semantic-release = "^7.16.1"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
commit_subject = "chore(release): v{version}"
commit_author = "github-actions <action@github.com>"
branch = "main"
build_command = "poetry build"
upload_to_pypi = false
changelog_file = ".gitignore"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
