[tool.poetry]
name = "playground"
version = "1.5.4"
description = "My new description"
authors = ["Branch Vincent <branchevincent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^8.0.7"

[tool.semantic_release]
branch = "main"
version_variable = "pyproject.toml:version"
commit_subject = "chore(release): v{version}"
commit_message = "[ci skip]"
commit_author = "github-actions <action@github.com>"
build_command = "poetry build"
upload_to_pypi = false
changelog_file = ".gitignore"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
